fixed radio and checkbox spacing issue in popover widgets

--- a/scss/gtk-3.0/widgets/_popover.scss
+++ b/scss/gtk-3.0/widgets/_popover.scss
@@ -11,7 +11,14 @@ popover {
       padding: 0.4em 1em;
       margin: 0 -0.5em;
       border-radius: 0.5em;
-
+      radio, check {
+        &:first-child  {
+          margin-right: 0.5em;
+        }
+        &:last-child {
+          margin-left: 0.5em;
+        }
+  }
       &:hover {
         background: colors.$white-weakest;
       }
